--- a/THANKS
+++ b/THANKS
@@ -15,6 +15,7 @@ Albert Chin-A-Young <china@thewrittenword.com>
 Andrey Slepuhin <pooh@msu.ru>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
+Charles S. Wilson <cwilson@ece.gatech.edu>
 Chris P. Ross <cross@eng.us.uu.net>
 DJ Delorie <dj@delorie.com>
 Edouard G. Parmelan <Edouard.Parmelan@France.NCR.COM>
@@ -32,10 +33,11 @@ Mark Kettenis <kettenis@phys.uva.nl>
 Ossama Othman <othman@cs.wustl.edu>
 Olly Betts <olly@muscat.co.uk>
 Pavel Roskin <pavel_roskin@geocities.com>
+Robert Collins <robert.collins@itdomain.com.au>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
 Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
 Todd Vierling <tv@pobox.com>
-Tom Tromey <tromey@cygnus.com>
+Tom Tmemey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
 Xavier Pianet <xavier@xingo.com>
