ltmain.in: Touch-up to make testsuite pass, and default tagname to CC when it isn't explicitly set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-14  Robert Boehne  <rboehne@gnu.org>
+
+	ltmain.in: Touch-up to make testsuite pass, and default tagname
+	to CC when it isn't explicitly set.
+
 2002-03-14  Anthony Green  <green@redhat.com>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_CC_C_O): Albert Chin's gcj fix.
