--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-16  Gary V. Vaughan  <gary@gnu.org>
+
+	* TODO: Removed obsolete comments about RMS' package system.
+
 2002-03-14  Robert Boehne  <rboehne@gnu.org>
 
 	ltmain.in: Touch-up to make testsuite pass, and default tagname
