--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-16  Gary V. Vaughan  <gary@gnu.org>
+
+	* TODO: Removed obsolete comments about RMS' package system.
+
 2002-03-07  Albert Chin-A-Young  <china@thewrittenword.com>
 
 	* libtool.m4: Allow LT_AC_PROG_SED to work under autoconf
