--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-04-01  Robert Boehne  <rboehne@gnu.org>
+
+	* tagdemo/foo.cpp: Use C++ IO to catch problems linking to C++
+	runtime libraries.
+	* tagdemo/main.cpp: Ditto.
+
 2002-03-16  Gary V. Vaughan  <gary@gnu.org>
 
 	* TODO: Removed obsolete comments about RMS' package system.
