--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-14  Jean-Frederic Clere  <jfrederic.clere@fujitsu-siemens.com>
+
+	* libtool.m4: Update support for Fujistu-Siemens Computers (FSC).
+	* ltmain.in: Add support for EBCDIC based systems.
+
 2002-04-03  Robert Boehne  <rboehne@gnu.org>
 
 	* exe/compile-txt.tpl: Handle the case when no tag is explicitly set,
