--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-02  Fritz Elfert  <felfert@to.com>
+
+	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS): Modify archive_expsym_cmds
+	to catch properly handle dll alias symbols.
+
 2002-04-14  Jean-Frederic Clere  <jfrederic.clere@fujitsu-siemens.com>
 
 	* libtool.m4: Update support for Fujistu-Siemens Computers (FSC).
