--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-11  Daniel Kobras  <kobras@linux.de>
+
+	* libltdl/ltdl.c (try_dlopen): Don't return bogus handle to user
+	  if tryall_dlopen() fails.
+
 2002-06-01  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/pdemo-exec.test: Typo.  s/hell-static/hell_static/
