--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-13  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* ltmain.in (irix, nonstopux): Set major before use.
+
 2002-06-11  Daniel Kobras  <kobras@linux.de>
 
 	* libltdl/ltdl.c (try_dlopen): Don't return bogus handle to user
