Added Bob Friesenhahn to AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Thomas Tanner <tanner@ffii.org>.  Co-maintainer.
 Gary V. Vaughan <gvv@techie.com>.  Co-maintainer.
 Ossama Othman <ossama@debian.org>.  Co-maintainer.
 Robert Boehne <rboehne@ricardo-us.com>.  Co-maintainer.
+Bob Friesenhahn <bfriesen@simple.dallas.tx.us>.  Co-maintainer.
