--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+        * ltdl.m4 & libltdl/ltdl.c: Port fully to native Win32 API.
+
 2002-07-31  Robert Boehne  <rboehne@gnu.org>
 
 	* f77demo/.cvsignore: New file, forgotten in the last commit.
