--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-09-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.de>
+
+	* libtool.m4 (osf[345]): Append $major to soname_spec.
+	Reflect this in library_names_spec.
+	* ltmain.in (osf): Prefix $major with '.' for use as extension.
+
 2002-08-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
         * ltdl.m4 & libltdl/ltdl.c: Port fully to native Win32 API.
