--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-24  Robert Boehne  <rboehne@gnu.org>
+
+	* ltmain.in: Fixed a few spelling errors.
+
 2002-09-17  Robert Boehne  <rboehne@gnu.org>
 
 	* libltdl/ltdl.c: Commented out access() call that checks for a
