--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-10-15  Albert Chin-A-Young  <china@thewrittenword.com>
+
+        * libtool.m4: When a module is built for AIX, the 'lib'
+        prefix isn't needed, neither is the version. AIX dlopen
+        will honor the RPATH in a library.
+
 2002-10-11  Christoph Egger  <Christoph_Egger@gmx.de>
 
 	* libtool.m4 (AC_LIBTOOL_PROG_LD_SHLIBS, darwin): Add
